blog/static/styles.css
body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    margin: 0;
    padding: 0;
    font-family: "Roboto", sans-serif;
}

.wrapper {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.banner {
    background-image: url('bannertest.png');
    background-size: cover;
    background-position: top;
    background-attachment: fixed;
    height: 30vh;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    z-index: 0;
}

.overlay-text {
    z-index: 1;
    margin: 0;
}

h1 {
    font-size: 3rem;
}

h2 {
    font-size: 2rem;
    padding-top: 1rem;
}

.content {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin: 2rem auto;
    width: 80%;
    max-width: 1200px;
}

.main-body {
    width: 100%;
}

.post-title {
    font-size: 1.5rem;
    font-weight: bold;
}

.pub-date {
    color: #acacac;
}

.post-body {
    padding-top: 1rem;
}

.result-title {
    font-size: 2rem;
    font-weight: bold;
}

.navigation-panel {
    width: 100%;
    max-width: 350px;
    margin-top: 2rem;
}

.post-tree {
    margin-top: 2rem;
}

.year.revealed .date {
    display: none;
}

ul {
    list-style-type: none;
}

li::before {
    content: '\25B6';
    margin-right: 0.5rem;
}

li.revealed::before {
    content: '\25BC';
}

.no-bullet li::before,
.no-bullet li.revealed::before {
    content: none;
}

.pagination {
    display: flex;
    flex-direction: column;
    align-items: center;
    min-height: 10vh;
}

.pages-nav {
    text-decoration: underline;
    margin-top: 0;
}

.separator {
    padding: 0.5rem;
}

a:hover, a:visited, a:link, a:active {
    text-decoration: none;
    color: black;
}

footer {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 5vh;
    background-color: #f1f1f1;
}

@media (max-width: 600px) {
    .content {
        flex-direction: row;
    }

    .main-body, .navigation-panel {
        flex: 1;
        width: 50%;
    }
}

